# awesome-awesome-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-update.yml  discover.yml  on-pr-merge.yml
data/: agents.yml  cli-tools.yml  coding.yml  datasets.yml  mcp-servers.yml  media.yml  models.yml  other.yml  papers.yml  productivity.yml  prompts.yml
scripts/: config.py  data_io.py  discover.py  enrich.py  generate.py  github_client.py  review.py  track.py
templates/: readme.md.j2
tests/: test_data_io.py  test_discover.py  test_generate.py  test_github_client.py  test_track.py
